#add data folder

--- a/index.Rmd
+++ b/index.Rmd
@@ -101,12 +101,19 @@ You can make a numbered list like this
 
 
 ```{r}
+
+#create data folder
 #read in CSV (MAC)
 
-plays <- read_csv("/Users/seandube/Desktop/FINAL PUG/nfl-big-data-bowl-2021/plays.csv")
-week1 <- read_csv("/Users/seandube/Desktop/FINAL PUG/nfl-big-data-bowl-2021/week1.csv")
-week2 <- read_csv("/Users/seandube/Desktop/FINAL PUG/nfl-big-data-bowl-2021/week2.csv")
-week3 <- read_csv("/Users/seandube/Desktop/FINAL PUG/nfl-big-data-bowl-2021/week3.csv")
-week4 <- read_csv("/Users/seandube/Desktop/FINAL PUG/nfl-big-data-bowl-2021/week4.csv")
-```
+plays <- read_csv("DATA/nfl-big-data-bowl-2021/plays.csv")
+\
+#data wrangling
+
+#dataframe of relevant variables from plays
+
+plays1 <- plays %>%
+  
+  
+
+#first down percentage, yardline, player result, play type, player position, yards to go, down, penaltyCodes, 
 
