--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: ""
+title: "NFL Passing"
 author: "Your Names Here"
 date: "Add a date"
 output:
@@ -8,22 +8,80 @@ output:
     highlight: NULL
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE, fig.align="center")
+```{r, echo=FALSE}
+library(shiny)
+library(ggplot2)
 library(tidyverse)
+library(png)
+library(grid)
 
-plays <- read_csv("DATA//nfl-big-data-bowl-2021/plays.csv")
-week1 <- read_csv("DATA//nfl-big-data-bowl-2021/week1.csv")
-week2 <- read_csv("DATA//nfl-big-data-bowl-2021/week2.csv")
-week3 <- read_csv("DATA//nfl-big-data-bowl-2021/week3.csv")
+plot1 <- read.csv("plot1finished.csv")
+footballfield <- png::readPNG("footballfield.png")
+
+togo <- c("short", "medium", "long")
+
+direction1 <- c("left", "right")
+
+ui <- fluidPage(
+  
+  titlePanel("NFL Passing"),
+  
+  sidebarPanel(
+    sliderInput(inputId = "down1", label = "Down",
+                min = 1, max = 4,
+                value = 1),
+    selectInput(inputId = "ToGo", label = "Yards To Go", choices = togo),
+    sliderInput(inputId = "yardline", label = "Absolute Yardline",
+                min = 0, max = 110,
+                value = 0),
+    selectInput(inputId = "direction", label = "Direction of Play", choices = direction1),
+    
+  ),
+  mainPanel(
+    tabsetPanel(
+      tabPanel("Play Stats", plotOutput("Plot")
+      )
+    )
+  )
+  
+)
 
 
 
-count(week1, event)
-#wrangled dat 
-#join by gameID play Id
+
+server <- function(input, output) {
+  
+  use_data <- reactive({
+    data <- plot1 %>%
+      filter(down == input$down1)%>%
+      filter(togo == input$ToGo) %>%
+      filter(absoluteYardlineNumber == input$yardline)%>%
+      filter(playDirection == input$direction)
+  })
+  
+  
+  output$Plot <- renderPlot(
+    
+    ggplot(data = use_data(), aes_string(x = "x", y = "y", color = "event"))+
+      annotation_custom(rasterGrob(footballfield, 
+                                   width = unit(1,"npc"), 
+                                   height = unit(1,"npc")), 
+                        -Inf, Inf, -Inf, Inf) + 
+      geom_point()+
+      xlim(0,120)+
+      ylim(-5,60)
+    
+  )
+}
+  
+  
 
 
+
+
+
+
+shinyApp(ui = ui, server = server)
 
 ```
 
@@ -47,34 +105,14 @@ You should test out updating your GitHub Pages website:
 
 You can embed code as normal, for example:
 
-```{r cars}
-summary(cars)
-```
 
 Let's clean up the format of that output:
 
-```{r pretty, echo=FALSE, warning=FALSE, message=FALSE}
-library(kableExtra)
-summary(cars) %>%
-  kable(col.names = c("Speed", "Distance")
-        , row.names = F) %>%
-  kable_styling(bootstrap_options = "striped"
-                , full_width = F) %>%
-  row_spec(0, bold = T, underline = T) %>%
-  column_spec(1:2, width = "1.5in") 
-```
 
 In a study from the 1920s, fifty cars were used to see how the speed of the car and the distance taken to stop were related.  Speeds ranged between `r min(cars$speed)` and `r max(cars$speed)` mph.  Distances taken to stop ranged between `r min(cars$dist)` and `r max(cars$dist)` feet, with the middle 50% falling between `r as.numeric(quantile(cars$dist)[2])` and `r as.numeric(quantile(cars$dist)[4])` feet.  
 
 You can also embed plots as normal, for example:
 
-```{r figure1, echo=FALSE}
-ggplot(data = cars, aes(x = speed, y = dist)) + 
-  geom_point() + 
-  labs(x = "Speed of car (mph)"
-       , y = "Distance taken to stop (ft)"
-       , title = "Cars Data (1920s)")
-```
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
 
@@ -113,21 +151,4 @@ You can make a numbered list like this
 2. Second thing I want to say
 3. Third thing I want to say
 
-
-```{r}
-
-#create data folder
-#read in CSV (MAC)
-
-
-
-#data wrangling
-
-#dataframe of relevant variables from plays
-
-plays1 <- plays %>%
-  
-  
-
-#first down percentage, yardline, player result, play type, player position, yards to go, down, penaltyCodes, 
 
