--- a/Wrangling.Rmd
+++ b/Wrangling.Rmd
@@ -45,7 +45,24 @@ library(tidyverse)
 #week16 <- read_csv("/Users/seandube/git/DATA/nfl-big-data-bowl-2021/week16.csv")
 #week17 <- read_csv("/Users/seandube/git/DATA/nfl-big-data-bowl-2021/week17.csv")
 
-
+#plays <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/plays.csv")
+#week1 <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/week1.csv")
+#week2 <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/week2.csv")
+#week3 <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/week3.csv")
+#week4 <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/week4.csv")
+#week5 <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/week4.csv")
+#week6 <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/week6.csv")
+#week7 <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/week7.csv")
+#week8 <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/week8.csv")
+#week9 <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/week9.csv")
+#week10 <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/week10.csv")
+#week11 <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/week11.csv")
+#week12 <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/week12.csv")
+#week13 <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/week13.csv")
+#week14 <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/week14.csv")
+#week15 <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/week15.csv")
+#week16 <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/week16.csv")
+#week17 <- read_csv("/Users/damienruparel/git/BLOG-ESPN/nfl-big-data-bowl-2021/week17.csv")
 
 
 
