--- a/Wrangling.Rmd
+++ b/Wrangling.Rmd
@@ -79,124 +79,11 @@ week1edit <- weeks %>%
   right_join(plays, week1edit, by = c("playId", "gameId")) %>%
   filter(event != "NA")
 
-week2edit <- weeks %>%
-  filter(event != "None") %>%
-  select(x,y,event, nflId, displayName, position, team, gameId, playId, playDirection)%>%
-  group_by(gameId, playId) %>%
-  right_join(plays, week2edit, by = c("playId", "gameId")) %>%
-  filter(event != "NA")
 
-week3edit <- weeks %>%
-  filter(event != "None") %>%
-  select(x,y,event, nflId, displayName, position, team, gameId, playId, playDirection)%>%
-  group_by(gameId, playId) %>%
-  right_join(plays, week3edit, by = c("playId", "gameId")) %>%
-  filter(event != "NA")
-
-week4edit <- weeks %>%
-  filter(event != "None") %>%
-  select(x,y,event, nflId, displayName, position, team, gameId, playId, playDirection)%>%
-  group_by(gameId, playId) %>%
-  right_join(plays, week4edit, by = c("playId", "gameId")) %>%
-  filter(event != "NA")
-
-week5edit <- weeks %>%
-  filter(event != "None") %>%
-  select(x,y,event, nflId, displayName, position, team, gameId, playId, playDirection)%>%
-  group_by(gameId, playId) %>%
-  right_join(plays, week5edit, by = c("playId", "gameId")) %>%
-  filter(event != "NA")
-
-week6edit <- weeks %>%
-  filter(event != "None") %>%
-  select(x,y,event, nflId, displayName, position, team, gameId, playId, playDirection)%>%
-  group_by(gameId, playId) %>%
-  right_join(plays, week6edit, by = c("playId", "gameId")) %>%
-  filter(event != "NA")
-
-week7edit <- weeks %>%
-  filter(event != "None") %>%
-  select(x,y,event, nflId, displayName, position, team, gameId, playId, playDirection)%>%
-  group_by(gameId, playId) %>%
-  right_join(plays, week7edit, by = c("playId", "gameId")) %>%
-  filter(event != "NA")
-
-week8edit <- weeks %>%
-  filter(event != "None") %>%
-  select(x,y,event, nflId, displayName, position, team, gameId, playId, playDirection)%>%
-  group_by(gameId, playId) %>%
-  right_join(plays, week8edit, by = c("playId", "gameId")) %>%
-  filter(event != "NA")
-
-week9edit <- weeks %>%
-  filter(event != "None") %>%
-  select(x,y,event, nflId, displayName, position, team, gameId, playId, playDirection)%>%
-  group_by(gameId, playId) %>%
-  right_join(plays, week9edit, by = c("playId", "gameId")) %>%
-  filter(event != "NA")
-
-week10edit <- weeks %>%
-  filter(event != "None") %>%
-  select(x,y,event, nflId, displayName, position, team, gameId, playId, playDirection)%>%
-  group_by(gameId, playId) %>%
-  right_join(plays, week10edit, by = c("playId", "gameId")) %>%
-  filter(event != "NA")
-
-week11edit <- weeks %>%
-  filter(event != "None") %>%
-  select(x,y,event, nflId, displayName, position, team, gameId, playId, playDirection)%>%
-  group_by(gameId, playId) %>%
-  right_join(plays, week11edit, by = c("playId", "gameId")) %>%
-  filter(event != "NA")
-
-week12edit <- weeks %>%
-  filter(event != "None") %>%
-  select(x,y,event, nflId, displayName, position, team, gameId, playId, playDirection)%>%
-  group_by(gameId, playId) %>%
-  right_join(plays, week12edit, by = c("playId", "gameId")) %>%
-  filter(event != "NA")
-
-week13edit <- weeks %>%
-  filter(event != "None") %>%
-  select(x,y,event, nflId, displayName, position, team, gameId, playId, playDirection)%>%
-  group_by(gameId, playId) %>%
-  right_join(plays, week13edit, by = c("playId", "gameId")) %>%
-  filter(event != "NA")
-
-week14edit <- weeks %>%
-  filter(event != "None") %>%
-  select(x,y,event, nflId, displayName, position, team, gameId, playId, playDirection)%>%
-  group_by(gameId, playId) %>%
-  right_join(plays, week14edit, by = c("playId", "gameId")) %>%
-  filter(event != "NA")
-
-week15edit <- weeks %>%
-  filter(event != "None") %>%
-  select(x,y,event, nflId, displayName, position, team, gameId, playId, playDirection)%>%
-  group_by(gameId, playId) %>%
-  right_join(plays, week15edit, by = c("playId", "gameId")) %>%
-  filter(event != "NA")
-
-week16edit <- weeks %>%
-  filter(event != "None") %>%
-  select(x,y,event, nflId, displayName, position, team, gameId, playId, playDirection)%>%
-  group_by(gameId, playId) %>%
-  right_join(plays, week16edit, by = c("playId", "gameId")) %>%
-  filter(event != "NA")
-
-week17edit <- weeks %>%
-  filter(event != "None") %>%
-  select(x,y,event, nflId, displayName, position, team, gameId, playId, playDirection)%>%
-  group_by(gameId, playId) %>%
-  right_join(plays, week17edit, by = c("playId", "gameId")) %>%
-  filter(event != "NA")
-
-
-combined_edits <- combine(week1edit, week2edit, week3edit, week4edit, week5edit, week6edit, week7edit, week8edit, week9edit, week10edit, week11edit, week12edit, week13edit, week14edit, week15edit, week16edit, week17edit)
 
 
 #filter the events needed
-plot <- combined_edits %>%
+plot <- week1edit %>%
   filter(event == "ball_snap" | event == "pass_outcome_incomplete" | event == "tackle" | event == "out_of_bounds" | event == "touchdown") %>%
   filter(displayName == "Football")
 
