--- a/Wrangling.Rmd
+++ b/Wrangling.Rmd
@@ -69,7 +69,7 @@ library(tidyverse)
 
 
 
-#weeks <- combine(week1, week2, week3, week4, week5, week6, week7, week8, week9, week10, week11, week12, week13, week14, week15, week16, week17)
+weeks <- combine(week1, week2, week3, week4, week5, week6, week7, week8, week9, week10, week11, week12, week13, week14, week15, week16, week17)
 #wrangle
 
 week1edit <- weeks %>%
@@ -79,8 +79,16 @@ week1edit <- weeks %>%
   right_join(plays, week1edit, by = c("playId", "gameId")) %>%
   filter(event != "NA")
 
+percentages <- plays %>%
+  select(possessionTeam, yardsToGo, passResult, offensePlayResult) %>%
+  rename(Team = possessionTeam, Result = passResult, yardsGained = offensePlayResult) %>%
+  group_by(Team, Result) %>%
+  summarise(n=n(), TotalYards = sum(yardsGained)) %>%
+  rename(TotalPlay_Type = n) %>%
+  filter(Result != "NA")
 
-
+  
+  
 
 #filter the events needed
 plot <- week1edit %>%
