--- a/Wrangling.Rmd
+++ b/Wrangling.Rmd
@@ -85,7 +85,8 @@ percentages <- plays %>%
   group_by(Team, Result) %>%
   summarise(n=n(), TotalYards = sum(yardsGained)) %>%
   rename(TotalPlay_Type = n) %>%
-  filter(Result != "NA")
+  filter(Result != "NA") %>%
+  
 
   
   
