--- a/Wrangling.Rmd
+++ b/Wrangling.Rmd
@@ -84,7 +84,7 @@ percentages <- plays %>%
   rename(Team = possessionTeam, Result = passResult, yardsGained = offensePlayResult) %>%
   group_by(Team, Result) %>%
   summarise(n=n(), TotalYards = sum(yardsGained)) %>%
-  rename(TotalPlay_Type = n) %>%
+  rename(TotalPlay_Result = n) %>%
   filter(Result != "NA" & Result != "R" & Result != "S") 
 
   
