--- a/index.Rmd
+++ b/index.Rmd
@@ -113,16 +113,14 @@ shinyApp(ui = ui, server = server)
 
 ## Limitations
 
-
+Although each NFL team in a season plays 16 games, we must take into account that each team varies in the amount of pass plays they call, and the skill level in their receiver core, which will have a major impact in their data. Teams that have a strong receiving core, and are a pass heavy team, may have much better passing stats than teams that lack in skilled receivers and focus on running the ball, despite playing the same amount of games. Furthermore, each game is different; though each game has 4, 15 minute quarters, the clock runs differently per game. A close, highly contested game can force teams to call more timeouts, find ways to get out of bounds to stop the clock, or may even go into overtime; all result in more passing plays to try and slow down the clock. A blowout may result in more running plays to keep the game clock running and to keep the game moving, so it ends relatively quicker. Other lurking variables include strength of schedule, injuries, and coaching tendencies. A more difficult strength of schedule may result in less passing yards and passing attempts completed, as the stronger opposing defenses can disrupt the flow of an offense. A coach that relies heavily on running plays and designs his offense around running the ball will certainly decrease the amount of pass attempts completed; this does not mean that the team is worse than a team with more passing yards. For example,  the Chicago Bears only had 3699 passing yards, whereas their rival, the Green Bay Packers, had 4602 yards. The Chicago Bears had an overall record of 12-4, and the Green Bay Packers had an overall record of 6-9-1, in 2018. Injuries may also have an impact on a team that focuses on passing the ball. If either the quarterback or a strong receiver gets injured, it may have an impact on the team's passing attempts. 
 
 
 ## Including links and images
 
-You can include [Tom Brady Passing](https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.bostonglobe.com%2F2020%2F03%2F20%2Fsports%2Ftom-brady-announces-hes-joining-tampa-bay-buccaneers%2F&psig=AOvVaw2isj5Eahm10bpoTa_oejsz&ust=1605354894207000&source=images&cd=vfe&ved=2ahUKEwiPlveSu__sAhX7ZBUIHaxbA7oQjRx6BAgAEAc)
+![Odell Beckham Jr (WR)](https://ftw.usatoday.com/wp-content/uploads/sites/90/2014/11/ap_aptopix_cowboys_giants_football_68976850.jpg)
 
-You can include images inline with text ![amherst mammoths](https://www.amherst.edu/system/files/styles/original/private/media/Mammoth_Icon_PurpleRGB.png)
-
-or on a new line
+![Michael Thomas (WR)](https://static.clubs.nfl.com/image/private/t_editorial_landscape_12_desktop/saints/t0g9bfyocxayqta7jhpn)
 
 
 
