--- a/Wrangling.Rmd
+++ b/Wrangling.Rmd
@@ -142,7 +142,7 @@ plot1finished <- plot1final %>%
   select(gameId, playId, event, down, yardsToGo, playDirection, absoluteYardlineNumber, playResult, togo, x, y, firstdown)
 
 write_csv(plot1finished, "plot1finished.csv")
-
+write_csv(percentages, "percentages.csv")
 
 ```
 
