--- a/index.Rmd
+++ b/index.Rmd
@@ -10,7 +10,7 @@ output:
 ---
 <center>
 
-![ESPN - Damian Ruparal, Nathan Tatko, Sean Dube](https://raw.githubusercontent.com/stat231-f20/Blog-ESPN/main/images/team_image.jpeg)
+![ESPN - Damien Ruparel, Nathan Tatko, Sean Dube](https://raw.githubusercontent.com/stat231-f20/Blog-ESPN/main/images/team_image.jpeg)
 
 </center>
 
@@ -28,7 +28,7 @@ Passing plays have become more common as teams can gain more yards compared to r
 
 ## The App
 
-To explore the outcome of passing plays, we created an app where one can input down, yards to go (short, medium, long), absolute yard line, and direction of the play. By changing these inputs, one will be able to see the outcome of every which is displayed on a cholorpleth of a football field. Events of the game are marked with different symbols. Check it out! 
+To explore the outcome of passing plays, we created an app where one can input down, yards to go (short, medium, long), absolute yard line, and direction of the play. By changing these inputs, one will be able to see the outcome of every which is displayed on a choropleth of a football field. Events of the game are marked with different symbols. The app also includes a data table of the passing stats for each team in the NFL. The data table shows the count of completed passes (C), incomplete passes (I), and interceptions (IN), and the total yards gained throughout the season for completed passes. Check it out! 
 
 ```{r, echo=FALSE, include=FALSE}
 library(shiny)
@@ -66,7 +66,7 @@ ui <- fluidPage(
     tabsetPanel(
       tabPanel("Play Stats", plotOutput("Plot")
       ),
-      tabPanel("Passing Statistics (2018 NFL SEASON)", DT::dataTableOutput("Table")
+      tabPanel("Overall Passing Statistics", DT::dataTableOutput("Table")
     )
   )
   
@@ -117,7 +117,7 @@ shinyApp(ui = ui, server = server)
 
 ## Limitations
 
-Although each NFL team in a season plays 16 games, we must take into account that each team varies in the amount of pass plays they call, and the skill level in their receiver core, which will have a major impact in their data. Teams that have a strong receiving core, and are a pass heavy team, may have much better passing stats than teams that lack in skilled receivers and focus on running the ball, despite playing the same amount of games. Furthermore, each game is different; though each game has 4, 15 minute quarters, the clock runs differently per game. A close, highly contested game can force teams to call more timeouts, find ways to get out of bounds to stop the clock, or may even go into overtime; all result in more passing plays to try and slow down the clock. A blowout may result in more running plays to keep the game clock running and to keep the game moving, so it ends relatively quicker. Other lurking variables include strength of schedule, injuries, and coaching tendencies. A more difficult strength of schedule may result in less passing yards and passing attempts completed, as the stronger opposing defenses can disrupt the flow of an offense. A coach that relies heavily on running plays and designs his offense around running the ball will certainly decrease the amount of pass attempts completed; this does not mean that the team is worse than a team with more passing yards. For example,  the Chicago Bears only had 3699 passing yards, whereas their rival, the Green Bay Packers, had 4602 yards. The Chicago Bears had an overall record of 12-4(W-L-D), and the Green Bay Packers had an overall record of 6-9-1(W-L-D), in 2018. Injuries may also have an impact on a team that focuses on passing the ball. If either the quarterback or a strong receiver gets injured, it may have an impact on the team's passing attempts. 
+Although each NFL team in a season plays 16 games, we must take into account that each team varies in the amount of pass plays they call, and the skill level in their receiver core, which will have a major impact in their data. Teams that have a strong receiving core, and are a pass heavy team, may have much better passing stats than teams that lack in skilled receivers and focus on running the ball, despite playing the same amount of games. Furthermore, each game is different; though each game has 4, 15 minute quarters, the clock runs differently per game. A close, highly contested game can force teams to call more timeouts, find ways to get out of bounds to stop the clock, or may even go into overtime; all result in more passing plays to try and slow down the clock. A blowout may result in more running plays to keep the game clock running and to keep the game moving, so it ends relatively quicker. Other lurking variables include strength of schedule, injuries, and coaching tendencies. A more difficult strength of schedule may result in less passing yards and passing attempts completed, as the stronger opposing defenses can disrupt the flow of an offense. A coach that relies heavily on running plays and designs his offense around running the ball will certainly decrease the amount of pass attempts completed; this does not mean that the team is worse than a team with more passing yards. For example,  the Chicago Bears only had 3699 passing yards, whereas their rival, the Green Bay Packers, had 4602 yards. The Chicago Bears had an overall record of 12-4 (W-L-D), and the Green Bay Packers had an overall record of 6-9-1 (W-L-D), in 2018. Injuries may also have an impact on a team that focuses on passing the ball. If either the quarterback or a strong receiver gets injured, it may have an impact on the team's passing attempts. 
 
 
 ## Images
